--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,9 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This Starter package assumes that a postgres database is configured
 
-Things you may want to cover:
+Insect the config/database.yml file for more information
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Insert your Zuora credentials into the secrets file
+Run rails s
+Navigate to localhost:3000
